Fix spacing

--- a/frontend/src/Cms/CommentWidget/CommentWidget.scss
+++ b/frontend/src/Cms/CommentWidget/CommentWidget.scss
@@ -4,7 +4,7 @@
 .comment {
   background-color: $color-white;
   margin-bottom: 20px;
-  padding: 20px 45px 20px 15px;
+  padding: 20px 45px 30px 15px;
 
   .avatar-img {
     margin-right: 15px;
@@ -44,7 +44,7 @@
     }
     .comment-info {
       display: block;
-      margin-bottom: 15px;
+      margin-bottom: 10px;
 
       .time {
         position: relative;
